// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineGraphRenderer Tests Base Rendering 1`] = `<svg />`;

exports[`LineGraphRenderer Tests Base Rendering 2`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,270)"
    >
      <path
        class="domain"
        d="M40.5,0.5H370.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(205.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(40,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,145.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-40"
        y="10"
      />
    </g>
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
    <g
      style="pointer-events: none;"
    >
      <path
        color="var(--tooltip-foreground"
        fill="var(--tooltip-background)"
        stroke="var(--tooltip-border)"
      />
    </g>
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 1`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,270)"
    >
      <path
        class="domain"
        d="M40.5,0.5H370.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(40.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .001
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(205.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .002
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(370.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .003
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(40,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,270.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,228.83333333333334)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,187.16666666666669)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,145.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,103.83333333333334)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,62.16666666666666)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,20.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="330"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-40"
        y="10"
      />
    </g>
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    >
      <path
        d="M40,186.66666666666669L67.5,172.7777777777778C95,158.8888888888889,150,131.11111111111111,205,103.33333333333333C260,75.55555555555556,315,47.77777777777778,342.5,33.88888888888889L370,20"
        stroke="#1f77b4"
      />
    </g>
    <g
      style="pointer-events: none;"
    >
      <path
        color="var(--tooltip-foreground"
        fill="var(--tooltip-background)"
        stroke="var(--tooltip-border)"
      />
    </g>
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 2`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,-33)"
    >
      <path
        class="domain"
        d="M444.5,0.5H178.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(444.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(391.30000000000007,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .001
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(338.09999999999997,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .002
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(284.90000000000003,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .003
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(231.7,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .004
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(178.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          .005
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-32.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-18.099999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-3.6999999999999993)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,10.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,25.100000000000005)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,39.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,53.89999999999999)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,68.29999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,82.70000000000002)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,97.10000000000001)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    >
      <path
        d="M390.80000000000007,-4.199999999999999L381.9333333333334,0.6000000000000014C373.06666666666666,5.400000000000002,355.3333333333333,15.000000000000005,337.59999999999997,24.600000000000005C319.8666666666666,34.199999999999996,302.1333333333334,43.79999999999999,293.2666666666667,48.599999999999994L284.40000000000003,53.39999999999999"
        stroke="#00FF00"
      />
    </g>
    <g
      style="pointer-events: none;"
    >
      <path
        color="var(--tooltip-foreground"
        fill="var(--tooltip-background)"
        stroke="var(--tooltip-border)"
      />
    </g>
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 3`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,-33)"
    >
      <path
        class="domain"
        d="M444.5,0.5H178.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(311.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          Fri 13
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-32.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-18.099999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-3.6999999999999993)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,10.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,25.100000000000005)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,39.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,53.89999999999999)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,68.29999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,82.70000000000002)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,97.10000000000001)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    >
      <path
        d="M311,87.96Z"
        stroke="#00FF00"
      />
    </g>
    <g
      style="pointer-events: none;"
    >
      <path
        color="var(--tooltip-foreground"
        fill="var(--tooltip-background)"
        stroke="var(--tooltip-border)"
      />
    </g>
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 4`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,-33)"
    >
      <path
        class="domain"
        d="M444.5,0.5H178.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(311.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-32.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-18.099999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-3.6999999999999993)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,10.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,25.100000000000005)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,39.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,53.89999999999999)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,68.29999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,82.70000000000002)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,97.10000000000001)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <g
      style="pointer-events: none;"
    >
      <path
        color="var(--tooltip-foreground"
        fill="var(--tooltip-background)"
        stroke="var(--tooltip-border)"
      />
    </g>
  </g>
</svg>
`;

exports[`LineGraphRenderer Tests With Data and Updates 5`] = `
<svg>
  <g
    id="lineChart0"
  >
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="xAxis"
      text-anchor="middle"
      transform="translate(0,-33)"
    >
      <path
        class="domain"
        d="M444.5,0.5H178.5"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(311.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1970
        </text>
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      id="yAxis"
      text-anchor="end"
      transform="translate(444,0)"
    >
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-32.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          0.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-18.099999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          5.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,-3.6999999999999993)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          10.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,10.7)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          15.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,25.100000000000005)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          20.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,39.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          25.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,53.89999999999999)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          30.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,68.29999999999998)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          35.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,82.70000000000002)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          40.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,97.10000000000001)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          45.00
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(0,111.5)"
      >
        <line
          stroke="currentColor"
          x2="-6"
        />
        <line
          stroke="currentColor"
          stroke-opacity="0.1"
          x2="-266"
        />
        <text
          dy="0.32em"
          fill="currentColor"
          x="-9"
        >
          50.00
        </text>
      </g>
      <text
        fill="currentColor"
        text-anchor="start"
        x="-444"
        y="10"
      >
        Values in range
      </text>
    </g>
    <g
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <g
      class="tooltip"
      style="pointer-events: none; display: none;"
    >
      <path
        color="var(--tooltip-foreground"
        fill="var(--tooltip-background)"
        stroke="var(--tooltip-border)"
      />
    </g>
  </g>
</svg>
`;
